# ludoGame

./: .gitignore  CMakeLists.txt  README.md  ludo.ui  ludoWindow.py  main.py  mainWindow.py  tut.py
resources/: resources.qrc
src/: CMakeLists.txt  board.cpp  board.h  computerPlayer.cpp  computerPlayer.h  defines.h.cmake  diceWidget.cpp  diceWidget.h  endField.cpp  endField.h  field.cpp  field.h  figure.cpp  figure.h  game.cpp  game.h  homeField.cpp  homeField.h  lastField.cpp  lastField.h  main.cpp  newGameDialog.cpp  newGameDialog.h  onDemandSpacer.cpp  onDemandSpacer.h  player.cpp  player.h  playerIcon.cpp  playerIcon.h  playerOption.cpp  playerOption.h  safeField.cpp  safeField.h  specialField.cpp  specialField.h  startField.cpp  startField.h
